<resources>
    <string name="app_name">M-APP</string>
    <string name="preference_file_key" translatable="false">com.example.m_app.PREFERENCE_FILE_KEY</string>

    <string name="action_settings">Settings</string>
    <string name="Google">Google</string>
    <string name="Facebook">Facebook</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="place_name">Place Name</string>
    <string name="open_hours">Open Hours</string>
    <string name="place_category_type">Place Category Type</string>
    <string name="location">Location</string>
    <string name="place_category_list">Place Category</string>
    <string name="activities">Activities</string>
    <string name="details">Details</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_signup">Sign up</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="or">OR</string>
    <string name="action_search">Search</string>
    <string name="action_Filter">Filter</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_price">By Price</string>
    <string name="action_sort_title">By Title</string>
    <string name="action_sort_location">By Location</string>

    <string name="facebook_application_id" translatable="false">1791254564245714</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1791254564245714</string>
    <string name="search_hint">Type to search</string>

</resources>
