<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"/>
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_Filter"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_filter_list_white_24dp"
        />

    <item android:title="@string/action_sort">
        <menu>
            <item
                android:id="@+id/action_sort_price"
                android:orderInCategory="100"
                android:title="@string/action_sort_price"
                />
            <item
                android:id="@+id/action_sort_name"
                android:orderInCategory="100"
                android:title="@string/action_sort_name"
                />
            <item
                android:id="@+id/action_sort_location"
                android:orderInCategory="100"
                android:title="@string/action_sort_location"
                />

        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
