<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="@dimen/linearheight">

    <android.support.v7.widget.CardView
        android:id="@+id/home_cardview"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="185dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/home_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/gf"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/place_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/place_name" />

                <TextView
                    android:id="@+id/place_category_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/place_category_type" />

                <TextView
                    android:id="@+id/place_open_hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/open_hours" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>